--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
+		<title>happex’s Magnifier</title>
+		<link href="style.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
+		<input type="search" id="search" placeholder="search one of my repls, Github repos or Scratch Projects..." onInput="search('search')">happex.github.io</input>
+		<script src="script.js"></script>
+	</body>
+</html>
