--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<input type="search" id="search" placeholder="search one of my repls, Github repos or Scratch Projects..." onInput="search('search')">happex.github.io</input>
+		<i onClick="search('search')" class="fa-solid fa-magnifying-glass"></i>
 		<script src="script.js"></script>
 	</body>
 </html>
